# openVDBViewerMayaNode

./: HOW_TO_BUILD  README.md
icons/: CMakeLists.txt  out_vdbViewerNode.xpm  vdbViewerNode.xpm
modules/: MayaConfig.cmake  OpenExrConfig.cmake  VdbConfig.cmake  boostConfig.cmake
src/: AEvdbViewerNodeTemplate.mel  CMakeLists.txt  vdbViewerNode.cpp  vdbViewerNode.h
